[package]
name = "desktopcast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ashpd = "0"
tokio = { version = "1", features = ["full"] }
futures-util = "0"
gstreamer = "0"
gstreamer-rtsp-server = "0"
get_if_addrs = "0"
x11rb = { version = "0", features = ["randr"] }
num_cpus = "1"

gst-retimestamp = { path = "lib/gst_retimestamp" }

upnp-client = { git = "https://github.com/seijikun/upnp-client-rs.git", rev = "b4859dc1190fffac39b9fe22d2d8d0fd1b959b5b" }